corrections in structure

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -137,7 +137,7 @@ a {
   font-style: normal;
   font-weight: 300;
   line-height: 64px;
-  /* 100% */
+  text-transform: uppercase;
   width: 277.763px;
 }
 
