--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -716,6 +716,39 @@ a {
 
 /* media */
 @media screen and (max-width: 1200px) {
+  .main-focus__title {
+    font-size: 4rem;
+    max-width: 2vw;
+  }
+
+  .main-focus__content_wrapper {
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-rows: 1fr, 1fr;
+    grid-template-columns: 1fr, 2fr;
+    grid-template-areas:
+      "image_one primary_mission"
+      "image_two secondary_mission";
+  }
+
+  .main-focus__content_secondary-mission {
+    height: 144px;
+    width: 279px;
+  }
+
+  .our-projects__title {
+    justify-items: center;
+    font-size: 4rem;
+    max-width: 2vw;
+  }
+
+  .our-projects__gallery {
+    display: grid;
+    grid-template-rows: repeat(5, 2fr);
+    grid-template-columns: 1fr;
+    width: 50px;
+  }
+
   .contacts {
     margin-bottom: 80px;
     margin-top: 80px;
