--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,6 +10,9 @@
   padding: 0 15px;
   margin: 0 auto;
 }
+.body{
+  overflow-x: hidden
+}
 
 .header {
   display: flex;
@@ -314,6 +317,7 @@ a {
   height: 200px;
   flex-shrink: 0;
   margin-bottom: 20px;
+  overflow: hidden;
 }
 
 .button_read_more {
@@ -716,6 +720,51 @@ a {
 
 /* media */
 @media screen and (max-width: 1200px) {
+  .building_foto1 {
+    max-width: 100vw;
+    height: auto;
+    overflow-x: hidden;
+  }
+
+  .project-lorum__left_path {
+    margin-top: auto;
+    margin:0 auto;
+    padding-bottom: 60px;
+    max-width: 100vw;
+  }
+
+  .rectangle_foto_2 {
+    display: none;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    margin:0 auto
+  }
+
+  .rectangle_foto_1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  .rectangle_foto_2 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+
+  .about_textarea {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
   .contacts {
     margin-bottom: 80px;
     margin-top: 80px;
@@ -743,6 +792,24 @@ a {
 }
 
 @media screen and (max-width: 1100px) {
+  .header__logo {
+    display: none;
+  }
+
+  .nav {
+    display: grid;
+    grid-area: "nav__main" "nav__gallery" "nav__projects" "nav__certifications" "nav__contacts";
+    margin-top: auto;
+  }
+
+  .nav__main,
+  .nav__gallery,
+  .nav__projects,
+  .nav__certifications,
+  .nav__contacts {
+    margin-top:  30px;
+    margin-left: 10px;
+  }
   .footer__inner {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
@@ -762,128 +829,6 @@ a {
   .footer__info-link,
   .footer__contacts-link {
     text-align: center;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .contacts {
-    margin-bottom: 60px;
-    margin-top: 60px;
-  }
-
-  .footer__top {
-    padding-top: 50px;
-    padding-bottom: 40px;
-  }
-
-  .footer__inner {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .footer__logo,
-  .footer__info,
-  .footer__contacts {
-    margin-bottom: 40px;
-  }
-
-  .footer__info-text,
-  .footer__contacts-text,
-  .footer__social-text {
-    font-size: 24px;
-  }
-
-  .footer__info-link + .footer__info-link {
-    margin-top: 12px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .contacts__title {
-    font-size: 50px;
-    line-height: 60px;
-  }
-
-  .contacts__inner {
-    margin-bottom: 50px;
-  }
-}
-
-@media screen and (max-width: 350px) {
-  .contacts__title {
-    font-size: 35px;
-    line-height: 40px;
-  }
-
-  .contacts__inner {
-    margin-bottom: 35px;
-  }
-
-  .contacts__btn {
-    padding: 25px 40px;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .building_foto1 {
-    max-width: 100vw;
-    height: auto;
-    overflow-x: hidden;
-  }
-
-  .project-lorum__left_path {
-    padding-top: 90px;
-    padding-bottom: 40px;
-  }
-
-  .rectangle_foto_2 {
-    display: none;
-  }
-
-  .about {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-  }
-
-  .rectangle_foto_1 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-  }
-
-  .rectangle_foto_2 {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
-  }
-
-  .about_textarea {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  .header__logo {
-    display: none;
-  }
-
-  .nav {
-    display: grid;
-    grid-area: "nav__main nav__gallery nav__projects nav__certifications nav__contacts";
-  }
-
-  .nav__main,
-  .nav__gallery,
-  .nav__projects,
-  .nav__certifications,
-  .nav__contacts {
-    margin-top: 5px;
-    margin-left: 10px;
   }
 }
 
@@ -944,6 +889,35 @@ a {
   .slide_numbers {
     display: none;
   }
+  .contacts {
+    margin-bottom: 60px;
+    margin-top: 60px;
+  }
+
+  .footer__top {
+    padding-top: 50px;
+    padding-bottom: 40px;
+  }
+
+  .footer__inner {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .footer__logo,
+  .footer__info,
+  .footer__contacts {
+    margin-bottom: 40px;
+  }
+
+  .footer__info-text,
+  .footer__contacts-text,
+  .footer__social-text {
+    font-size: 24px;
+  }
+
+  .footer__info-link + .footer__info-link {
+    margin-top: 12px;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -952,6 +926,14 @@ a {
   .about_h2 {
     font-size: 50px;
     line-height: 60px;
+  }
+  .contacts__title {
+    font-size: 50px;
+    line-height: 60px;
+  }
+
+  .contacts__inner {
+    margin-bottom: 50px;
   }
 }
 
@@ -971,4 +953,17 @@ a {
   .button_read_more {
     padding: 25px 40px;
   }
+  .contacts__title {
+    font-size: 35px;
+    line-height: 40px;
+  }
+
+  .contacts__inner {
+    margin-bottom: 35px;
+  }
+
+  .contacts__btn {
+    padding: 25px 40px;
+  }
 }
+
