--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -416,6 +416,7 @@ a {
   font-weight: 700;
   line-height: 64px;
   position: absolute;
+  padding-top: 3rem;
   left: 6rem;
   top: 130rem;
 }
@@ -430,13 +431,13 @@ a {
   text-transform: uppercase;
   position: absolute;
   left: 6rem;
-  top: 140rem;
+  top: 143rem;
 }
 
 .our-projects__arrow-first {
   position: absolute;
   left: 12rem;
-  top: 139.7rem;
+  top: 142.7rem;
 }
 
 .our-projects__image-roof {
@@ -742,11 +743,27 @@ a {
     max-width: 2vw;
   }
 
+  .our-projects__projects {
+    font-size: 2rem;
+    line-height: 2.5rem;
+    padding-top: 5rem;
+  }
+
   .our-projects__gallery {
     display: grid;
-    grid-template-rows: repeat(5, 2fr);
+    grid-template-rows: repeat (6, 1fr);
     grid-template-columns: 1fr;
-    width: 5vw;
+    grid-gap: 1rem;
+    justify-items: center;
+    max-width: 3vw%;
+  }
+
+  .our-projects__button {
+    display: grid;
+    grid-area: our-projects__button;
+    position: absolute;
+    right: 10rem;
+    bottom: 10rem;
   }
 
   .contacts {
